[gd_scene load_steps=4 format=3 uid="uid://t2fjrybq8fpp"]

[ext_resource type="PackedScene" uid="uid://4sd4d8lkbkls" path="res://Npc/base_npc.tscn" id="1_jftvo"]
[ext_resource type="Script" path="res://Npc/friendly/FriendlyNpc.gd" id="2_iyyjk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pnknk"]
size = Vector2(138, 113)

[node name="FriendlyNPC" instance=ExtResource("1_jftvo")]
script = ExtResource("2_iyyjk")

[node name="HurtBox" parent="." index="0"]
collision_layer = 1

[node name="ShoppingArea" type="Area2D" parent="." index="3"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShoppingArea" index="0"]
shape = SubResource("RectangleShape2D_pnknk")

[node name="InteractHint" type="Label" parent="." index="4"]
visible = false
offset_left = -16.0
offset_top = -54.0
offset_right = 18.0
offset_bottom = -20.0
theme_override_font_sizes/font_size = 24
text = "F"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="ShoppingArea" to="." method="_on_shopping_area_body_entered"]
[connection signal="body_exited" from="ShoppingArea" to="." method="_on_shopping_area_body_exited"]

[editable path="HurtBox"]
